Premier prototype fonctionnel avec GUI

--- a/sbgb-gui/src/app/sbgb/sbgb-image/sbgb-image.component.html
+++ b/sbgb-gui/src/app/sbgb/sbgb-image/sbgb-image.component.html
@@ -27,7 +27,7 @@
   <!-- Partie droite : 80% -->
   <div class="right-section" style="width:80%;margin-left: 1em; margin-right: 1em;">
     <h2>Image</h2>
-    <img [src]="computedImage" alt="description" style="max-width:100%;">
+    <img [src]="computedImage()"  alt="description" style="max-width:100%;">
   </div>
 
 </div>
