--- a/sbgb-gui/src/app/sbgb/sbgb-image/sbgb-image.component.html
+++ b/sbgb-gui/src/app/sbgb/sbgb-image/sbgb-image.component.html
@@ -2,32 +2,73 @@
 
   <!-- Partie gauche : 20% -->
   <div class="left-section" style="width:20%;margin-right: 1em;">
-    <div style="display: flex; justify-content: space-between; align-items: center;">
-      <h2>Entrées</h2>
-      <button mat-raised-button color="primary" (click)="computeImage()">Générer</button>
-    </div>
-    <form [formGroup]="_myForm" style="display: flex; flex-direction: column; align-items: start; justify-content: space-between;">
-      <label for="width">Width</label>
-      <mat-form-field appearance="outline">
-        <input id="width" type="number" matInput formControlName="width">
-      </mat-form-field>
-      <label for="height">Height</label>
-      <mat-form-field appearance="outline">
-        <input id="height" type="number" matInput formControlName="height">
-      </mat-form-field>
-      <label for="seed">Seed</label>
-      <mat-form-field appearance="outline">
-        <input id="seed" type="number" matInput formControlName="seed">
-      </mat-form-field>
-    </form>
+    <mat-card>
+      <mat-card-content>
+        <div style="display: flex; justify-content: space-between; align-items: center;">
+          <h2>Paramètre de Build</h2>
+          <button mat-raised-button color="primary" (click)="computeImage()">Build</button>
+        </div>
+        <form [formGroup]="_myForm"
+              style="display: flex; flex-direction: column; align-items: start; justify-content: space-between;">
+          <section>
+            <mat-form-field>
+              <mat-label>Width</mat-label>
+              <input matInput type="number" formControlName="width">
+            </mat-form-field>
+            <mat-form-field>
+              <mat-label>Height</mat-label>
+              <input type="number" matInput formControlName="height">
+            </mat-form-field>
+            <mat-form-field>
+              <mat-label>Seed</mat-label>
+              <input type="number" matInput formControlName="seed">
+            </mat-form-field>
+          </section>
+          <section>
+            <div style="display: flex; flex-direction: column; justify-content: center; width: 100%;">
+              <label for="backgroundColor">Background</label>
+              <input id="backgroundColor" type="color" formControlName="backgroundColor">
+            </div>
+            <div style="display: flex; flex-direction: column; justify-content: center; width: 100%;">
+              <label for="backThreshold">Back Threshold {{ _myForm.get("backThreshold")?.value }}</label>
+              <mat-slider min="0.01" max="0.97" step="0.01" discrete="false">
+                <input id="backThreshold" matSliderThumb formControlName="backThreshold">
+              </mat-slider>
+            </div>
+            <div style="display: flex; flex-direction: column; justify-content: space-between; width: 100%;">
+              <label for="middleColor">Middle</label>
+              <input id="middleColor" type="color" formControlName="middleColor">
+            </div>
+            <div style="display: flex; flex-direction: column; justify-content: center; width: 100%;">
+              <label for="middleThreshold">Back Threshold {{ _myForm.get("middleThreshold")?.value }}</label>
+              <mat-slider min="0.1" max="0.99" step="0.01" discrete="false">
+                <input id="middleThreshold" matSliderThumb formControlName="middleThreshold">
+              </mat-slider>
+            </div>
+            <div style="display: flex; flex-direction: column; justify-content: space-between; width: 100%;">
+              <label for="foregroundColor">Foreground</label>
+              <input id="foregroundColor" type="color" formControlName="foregroundColor">
+            </div>
+          </section>
+        </form>
+      </mat-card-content>
+    </mat-card>
   </div>
+
   <!-- liseré de séparation pour une meilleure visualisation -->
   <div style="width:1px; background-color:#ddd;"></div>
 
   <!-- Partie droite : 80% -->
   <div class="right-section" style="width:80%;margin-left: 1em; margin-right: 1em;">
-    <h2>Image</h2>
-    <img [src]="computedImage()"  alt="description" style="max-width:100%;">
+    <ng-container *ngIf="!imageIsBuilding()">
+      <img [src]="computedImage()" *ngIf="computedImage(); else noImage" alt="description" style="max-width:100%;">
+      <ng-template #noImage>
+        <p>No image available</p>
+      </ng-template>
+    </ng-container>
+    <ng-container *ngIf="imageIsBuilding()">
+      <mat-spinner></mat-spinner>
+    </ng-container>
   </div>
 
 </div>
