Positionnement de l'animation de travail au centre de l'écran

--- a/sbgb-gui/src/app/sbgb/sbgb-image/sbgb-image.component.html
+++ b/sbgb-gui/src/app/sbgb/sbgb-image/sbgb-image.component.html
@@ -5,5 +5,7 @@
   </ng-template>
 </ng-container>
 <ng-container *ngIf="imageIsBuilding()">
-  <mat-spinner></mat-spinner>
+  <div class="spinner-container">
+    <mat-spinner></mat-spinner>
+  </div>
 </ng-container>
