--- a/sbgb-gui/src/app/shared/components/library-list/library-list.component.html
+++ b/sbgb-gui/src/app/shared/components/library-list/library-list.component.html
@@ -22,11 +22,13 @@
         <td mat-cell *matCellDef="let item" class="note-cell">{{ getStars(item) }}</td>
       </ng-container>
 
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Nom</th>
-        <td mat-cell *matCellDef="let item">{{ item.name || item.description }}</td>
-      </ng-container>
+      <!-- Name Column (optional) -->
+      @if (showNameColumn) {
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef>Nom</th>
+          <td mat-cell *matCellDef="let item">{{ item.name || item.description }}</td>
+        </ng-container>
+      }
 
       <!-- Description Column -->
       <ng-container matColumnDef="description">
