--- a/sbgb-gui/src/app/app.component.scss
+++ b/sbgb-gui/src/app/app.component.scss
@@ -11,3 +11,10 @@ html, body {
 .example-spacer {
   flex: 1 1 auto;
 }
+
+.version-info {
+  font-size: 0.8rem;
+  opacity: 0.7;
+  margin-left: 10px;
+  white-space: nowrap;
+}
