--- a/sbgb-gui/src/app/sbgb/sbgb-shell/sbgb-shell.component.scss
+++ b/sbgb-gui/src/app/sbgb/sbgb-shell/sbgb-shell.component.scss
@@ -66,6 +66,15 @@
   display: flex;
   flex-direction: row;
   gap: 0;
+  width: 100%;
+  justify-content: center;
+
+  mat-icon {
+    font-size: 12px;
+    width: 12px;
+    height: 12px;
+    line-height: 12px;
+  }
 }
 
 .delete-render-btn {
