--- a/sbgb-gui/src/app/sbgb/sbgb-shell/sbgb-shell.component.scss
+++ b/sbgb-gui/src/app/sbgb/sbgb-shell/sbgb-shell.component.scss
@@ -53,6 +53,7 @@
   padding: 6px;
   background: rgba(0,0,0,0.02);
   width: 90px;
+  cursor: pointer;
   transition: border-color 0.2s, box-shadow 0.2s;
 
   &.selected {
