--- a/sbgb-gui/src/app/sbgb/sbgb-param/sbgb-param.component.html
+++ b/sbgb-gui/src/app/sbgb/sbgb-param/sbgb-param.component.html
@@ -1,6 +1,6 @@
 <mat-expansion-panel [expanded]="true">
   <mat-expansion-panel-header>
-    <mat-panel-title class="panel-descriptions">
+    <mat-panel-title class="panel-descriptions" [class.pending]="isModifiedSinceBuild">
       <span class="base-description">{{ describeBase() }}</span>
       <span class="cosmetic-description">{{ describeCosmetic() }}</span>
     </mat-panel-title>
