--- a/sbgb-gui/src/app/shared/components/image-preview/image-preview.component.scss
+++ b/sbgb-gui/src/app/shared/components/image-preview/image-preview.component.scss
@@ -12,7 +12,7 @@
   justify-content: center;
   overflow: hidden;
 
-  &.real-size {
+  &.is-real-size {
     overflow: auto;
     align-items: flex-start;
     justify-content: flex-start;
@@ -27,7 +27,7 @@
   display: block;
   border-radius: 4px;
 
-  .real-size & {
+  .is-real-size & {
     max-width: none;
     max-height: none;
   }
@@ -68,7 +68,7 @@
     border-radius: 0;
     border: none;
 
-    &:not(.real-size) .preview-image {
+    &:not(.is-real-size) .preview-image {
       max-width: 100vw;
       max-height: 100vh;
     }
