style(sbgb): update base model label in param component

--- a/sbgb-gui/src/app/sbgb/sbgb-param/sbgb-param.component.html
+++ b/sbgb-gui/src/app/sbgb/sbgb-param/sbgb-param.component.html
@@ -9,7 +9,7 @@
   <div class="two-columns">
     <!-- Colonne gauche : Modèle de Base -->
     <div [formGroup]="baseForm" class="param-column">
-      <h3>Modèle de Base</h3>
+      <h3>Structure de base</h3>
       <section>
         <mat-form-field>
           <mat-label>Width</mat-label>
